--- a/navbar/index.html
+++ b/navbar/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="left">
             <img class="logo" src="logo.png" alt="">
-            <h1>Learn Coding</h1>
+            <h1>Code Coding</h1>
         </div>
         <ul class="shown">
             <li class="mobile"><a href="#">Home</a></li>
